Cleand up configuration estimation